Add new flag to provide the module name as output